--- a/src/components/ProfilePage/ProfilePage.scss
+++ b/src/components/ProfilePage/ProfilePage.scss
@@ -54,8 +54,13 @@
         .img-wrap{
             margin-right: 30px;
             border: 4px solid #dedede;
-            img{
-                height: 100%;
+            min-width: 160px;
+            width: 160px;
+            height: 160px;
+            img {
+              height: 100%;
+              width: 100%;
+              object-fit: contain;
             }
         }
         p{
@@ -111,4 +116,37 @@
     p.success{
         display: block;
     }
+}
+
+@media (max-width: 700px) {
+  .profile-info {
+    .wrap-form {
+      grid-template-columns: 1fr;
+      .right-part {
+        padding-top: 0;
+      }
+    }
+  } 
+}
+
+@media (max-width: 400px) {
+  .profile-info {
+    .wrap-form {
+      .avatar {
+        flex-direction: column;
+        align-items: center;
+        .img-wrap {
+          margin-right: 0;
+        }
+        .desc-wrap {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+        p {
+          max-width: 100%;
+        }
+      }
+    }
+  }
 }
